apps/base/linkwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkwarden-deployment
  namespace: apps
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: linkwarden
  template:
    metadata:
      labels:
        app: linkwarden
    spec:
      containers:
        - name: linkwarden
          image: ghcr.io/linkwarden/linkwarden:v2.14.1
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 250Mi
            limits:
              cpu: 1000m
              memory: 1.5Gi
          volumeMounts:
            - name: linkwarden-pvc-longhorn
              mountPath: /data/data
        - name: meilisearch
          image: getmeili/meilisearch:v1.45.0
          ports:
            - name: http
              containerPort: 7700
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 2Gi
          volumeMounts:
            - name: meilisearch-pvc-longhorn
              mountPath: /meili_data
      restartPolicy: Always
      volumes:
        - name: linkwarden-pvc-longhorn
          persistentVolumeClaim:
            claimName: linkwarden-pvc-longhorn
        - name: meilisearch-pvc-longhorn
          persistentVolumeClaim:
            claimName: meilisearch-pvc-longhorn
