apps/base/linkwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkwarden-service
  namespace: apps
spec:
  selector:
    app: linkwarden
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
